--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle.properties
@@ -30,6 +30,9 @@ pdcPeas.viewAxis                       = Voir l'axe
 pdcPeas.editAxis                       = Editer l'axe
 pdcPeas.editValue                      = Editer la valeur
 pdcPeas.updateValue                    = Modifier la valeur
+pdcPeas.moveValue                      = D\u00e9placer la valeur
+pdcPeas.editRights						= G\u00e9rer les droits
+pdcPeas.noRights						= Vous n'avez aucun droit sur cet axe.
 
 pdcPeas.value                          = Valeur
 pdcPeas.daughterValue                  = Valeur fille
@@ -52,6 +55,13 @@ pdcPeas.confirmDeleteArbo              = \u00cates-vous s\u00fbr de vouloir supp
 pdcPeas.confirmDeleteValue             = \u00cates-vous s\u00fbr de vouloir supprimer la valeur ?
 pdcPeas.confirmDeletePosition          = \u00cates-vous s\u00fbr de vouloir supprimer la position ?
 pdcPeas.confirmDeleteAxis              = \u00cates-vous s\u00fbr de vouloir supprimer votre s\u00e9lection ?
+pdcPeas.confirmMoveValue			   = Etes-vous s\u00fbr de vouloir d\u00e9placer cette valeur et tout ce qu'elle contient ?
+
+pdcPeas.confirmDeleteAllManagers	   = \u00cates-vous s\u00fbr de vouloir supprimer tous les gestionnnaires ?
+pdcPeas.deleteAllManagers			   = Supprimer tous les gestionnaires
+pdcPeas.updateManagers				   = Modifier la liste des gestionnaires
+pdcPeas.managers					   = Gestionnaires
+pdcPeas.managersInherited			   = Gestionnaires h\u00e9rit\u00e9s
 
 pdcPeas.createDaughterValue            = Cr\u00e9er une valeur fille
 pdcPeas.insertMotherValue              = Ins\u00e9rer une valeur m\u00e8re
@@ -92,6 +102,7 @@ pdcPeas.notVariants                    = Invariantes
 pdcPeas.optional                       = Facultatif
 
 pdcPeas.axisAlreadyExist               = Un axe de m\u00eame nom existe d\u00e9j\u00e0 !
+pdcPeas.axisCantMove				   = On ne peut d\u00e9placer un axe !
 pdcPeas.valueAlreadyExist              = Une valeur de m\u00eame nom existe d\u00e9j\u00e0 !
 pdcPeas.maximumAxisReach               = Le nombre maximum d'axes a \u00e9t\u00e9 atteint !
 pdcPeas.positionAlreadyExist           = La position existe d\u00e9j\u00e0 !
@@ -122,13 +133,16 @@ pdcPeas.SortResultSearch = tri\u00e9s par :
 pdcPeas.SortValueSearch.1 = Pertinence
 pdcPeas.SortValueSearch.2 = Titre
 pdcPeas.SortValueSearch.3 = Auteur
-pdcPeas.SortValueSearch.4 = Date
-pdcPeas.SortValueSearch.5 = Emplacement
+pdcPeas.SortValueSearch.4 = Date de cr\u00e9ation
+pdcPeas.SortValueSearch.5 = Date de modification
+pdcPeas.SortValueSearch.6 = Emplacement
+pdcPeas.SortValueSearch.7 = Popularit\u00e9
 pdcPeas.DomainSelect = Espace :
-pdcPeas.ComponentSelect = Service :
+pdcPeas.ComponentSelect = Application :
 pdcPeas.AuthorSelect = Publieur :
-pdcPeas.AfterDate = Apr\u00e8s le 
-pdcPeas.BeforeDate = Avant le 
+pdcPeas.CreateAfterDate = Publi\u00e9 apr\u00e8s le :
+pdcPeas.UpdateAfterDate = Modifi\u00e9 apr\u00e8s le :
+pdcPeas.BeforeDate = et/ou avant le :
 pdcPeas.NoResult = Aucune r\u00e9ponse
 pdcPeas.OneResult = Une seule r\u00e9ponse trouv\u00e9e.
 pdcPeas.OneResultPage =  r\u00e9ponses trouv\u00e9es
@@ -223,8 +237,8 @@ pdcPeas.helpCol1Content1 = Pour obtenir tous les mots commen\u00e7ant par exempl
 pdcPeas.helpCol1Content2 = HYDRO
 pdcPeas.helpCol1Content3 = mettre un ast\u00e9risque \u00e0 la fin du mot : HYDRO*
 
-pdcPeas.helpCol2Content1 = "Et" est l'op\u00e9rateur implicite.
-pdcPeas.helpCol2Content2 = Ex. : Chien Chat = Chien AND Chat<br>
+pdcPeas.helpCol2Content1 = "*" est l'op\u00e9rateur implicite
+pdcPeas.helpCol2Content2 = Ex. : Chien Chat = Chien * Chat<br>
 pdcPeas.helpCol2Content3 = Et : <b>AND</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Chien AND Chat
 pdcPeas.helpCol2Content4 = Ou : <b>OR</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Chien OR Chat
 pdcPeas.helpCol2Content5 = Sauf : <b>NOT</b>&nbsp;&nbsp;&nbsp;&nbsp;Ex.: Chat NOT siamois
@@ -234,8 +248,10 @@ pdcPeas.helpCol3Content2 = Ex. : "r\u00e9servation de salles"
 pdcPeas.helpCol3Content3 = 
 pdcPeas.helpCol3Content4 = 
 
+pdcPeas.help.operand.OR = OU
+pdcPeas.help.operand.AND = ET
 
-pdcPeas.openUserPanelPeas           = Acc\u00e8der au panneau d'utilisateurs
+pdcPeas.openUserPanelPeas = Acc\u00e8der au panneau d'utilisateurs
 
 pdcPeas.classifyImpossible = Classement impossible pour l'instant. Aucun axe de classement n'a \u00e9t\u00e9 d\u00e9fini par le gestionnaire.
 
@@ -254,6 +270,8 @@ pdcPeas.inProgress = Recherche en cours !<br/>Veuillez patienter...
 
 pdcPeas.choiceForm = Vous devez choisir un formulaire
 
+pdcPeas.Axe = Axe
+
 pdcPeas.selectAll=Tout s\u00e9lectionner
 
 pdcpeas.didYouMean= Essayez avec cette orthographe :
@@ -267,22 +285,21 @@ pdcPeas.facet.tooltip.disable= Cliquer pour supprimer le filtre sur *
 pdcPeas.facet.toggle.show = Tout afficher
 pdcPeas.facet.toggle.hide = Réduire
 
-pdcPeas.popularity = * views
+pdcPeas.popularity = Consult\u00e9 * fois
 
 pdcPeas.external.search.label=Serveur externe :
 pdcPeas.external.search.unknown=Serveur externe
 pdcPeas.external.search.error=Veuillez contacter l'administrateur du site. Un probl\u00e8me de configuration ne permet pas d'obtenir le lien d'acc\u00e8s \u00e0 cette information externe.
 pdcPeas.error= Erreur
 
-# Label linked to pdcPeasSettings.properties : external search
-external.search.server.1.label=My external server 1
-external.search.server.2.label=My external server 2
+# Label linked to pdcPeasSettings.properties
+external.search.server.1.label=Mon serveur externe 1
+external.search.server.2.label=Mon serveur externe 2
 
 pdcPeas.MustContainsMandatoryAxis=doit \u00eatre class\u00e9e sur les axes obligatoires
 pdcPeas.MustBeClassified = Le classement est obligatoire pour la cr\u00e9ation d'une contribution.<br />Veuillez s\u00e9lectionner une position et la valider.
 pdcPeas.theContent=Cette contribution
 pdcPeas.CanDoAPredefineClassification = Vous avez la possibilit\u00e9 de d\u00e9finir un classement par d\u00e9faut pour les publications du th\u00e8me <strong>{0}</strong>. <br />Sinon ce th\u00e8me utilisera le classement d\u00e9fini pour le th\u00e8me parent.
-
 # Label linked to pdcPeasSettings.properties : typed search
 search.type.1.label= Publications GED
 search.type.2.label= Ev\u00e9nements
