closing first step of feature #3600 (main mechanism + a pass on all impacted JSP pages)

--- a/config-core/src/main/config/properties/org/silverpeas/util/viewGenerator/settings/graphicElementFactorySettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/viewGenerator/settings/graphicElementFactorySettings.properties
@@ -24,3 +24,5 @@
 IconsPath = /util/viewGenerator/icons
 Pagination.NumberOfPagesAround=10
 Pagination.DisplayTotalNumberOfPages=true
+
+menu.actions.creation.highlight = true
