closing feature #3458, integration of Aurore's touch

--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle.properties
@@ -123,3 +123,4 @@ JDP.userDomainQuotaMaxCountHelp = 0 pour un nombre illimit\u00e9
 JDP.userDomainQuotaMaxCountError = Le nombre maximum d'utilisateurs renseign\u00e9 pour le domaine est incorrect.
 JDP.userDomainQuotaCurrentCount = {0} {0,choice, 1#utilisateur enregistr\u00e9| 1<utilisateurs enregistr\u00e9s}
 JDP.userDomainQuotaFull = Le nombre maximum d'utilisateurs est atteint
+JDP.quota = Limit\u00e9 \u00E0 * utilisateurs
