Feature #82 : first implementation of the versioned / simple document switch

--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle.properties
@@ -98,7 +98,7 @@ myProfile.tab.invitations = Invitations
 myProfile.networks.yourAccount = Votre compte
 myProfile.networks.linkedToSilverpeas = est li\u00E9 \u00E0 votre profil
 myProfile.networks.notLinkedToSilverpeas = n'est pas encore li\u00E9 \u00E0 votre profil
-myProfile.networks.linkToMySilverpeasAccount = Lier \u00E0 mon profil
+myProfile.networks.linkToMySilverpeasAccount = Lier \u00E0 mon compte
 myProfile.networks.unlinkConfirmation = Etes-vous s\u00FBr(e) de ne plus vouloir lier ce r\u00E9seau social \u00E0 votre profil ?
 myProfile.networks.unlinkConfirmationTitle = Confirmation
 
