--- a/ws-test-core/pom.xml
+++ b/ws-test-core/pom.xml
@@ -34,6 +34,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.0-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
       <scope>compile</scope>
