mise a jouor des icones de creation

--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasIcons.properties
@@ -26,8 +26,8 @@ JDP.temp = /util/icons/publicationAdd.gif
 JDP.anglebasdt = /admin/jsp/icons/angleBasDomainsBar.gif
 JDP.anglehtdt = /admin/jsp/icons/angleHautDomainsBar.gif
 
-JDP.domainAdd = /util/icons/domain_to_add.gif
-JDP.domainSqlAdd = /util/icons/sqlDomainAdd.gif
+JDP.domainAdd = /util/icons/create-action/add-domain.png
+JDP.domainSqlAdd = /util/icons/create-action/add-sql-domain.png
 JDP.domainDel = /util/icons/domain_to_del.gif
 JDP.domainSqlDel = /util/icons/sqlDomainDel.gif
 JDP.domainSynchro = /util/icons/domain_to_synchro.gif
@@ -39,7 +39,7 @@ JDP.domainSqlIcone = /util/icons/component/sqlDomain.gif
 
 JDP.group = /util/icons/groupe.gif
 JDP.groupSynchronized = /jobDomainPeas/jsp/icons/scheduledGroup.gif
-JDP.groupAdd = /util/icons/userPanelPeasto_add.gif
+JDP.groupAdd = /util/icons/create-action/add-group.png
 JDP.groupDel = /util/icons/userPanelPeas_to_del.gif
 JDP.groupImport = /util/icons/group_add_to_domain.gif
 JDP.groupSynchro = /util/icons/group_synchro.gif
