--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasIcons.properties
@@ -38,7 +38,7 @@ JSPP.group = /util/icons/groupe.gif
 JSPP.usersGroupsDelete = /util/icons/userPanelPeas_to_del.gif
 JSPP.UPSpaceTemplateProfile = /util/icons/groupe.gif
 
-JSPP.instanceAdd = /util/icons/instance_add.gif
+JSPP.instanceAdd = /util/icons/create-action/add-application.png
 JSPP.instanceDel = /util/icons/instance_del.gif
 JSPP.instanceUpdate = /util/icons/instance_update.gif
 JSPP.CopyComponent = /util/icons/copyComponent.gif
@@ -49,7 +49,7 @@ JSPP.spaceDel = /util/icons/space_del.gif
 JSPP.spaceUpdate = /util/icons/space_update.gif
 JSPP.spaceLock = /util/icons/space_lock.gif
 JSPP.spaceUnlock = /util/icons/space_unlock.gif
-JSPP.subspaceAdd = /util/icons/subspace_add.gif
+JSPP.subspaceAdd = /util/icons/create-action/add-subspace.png
 
 JSPP.homeSpaceIcon = /util/icons/Home.gif
 
