--- a/config-core/src/main/config/properties/org/silverpeas/mylinks/settings/myLinksIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/mylinks/settings/myLinksIcons.properties
@@ -30,5 +30,5 @@ myLinks.obligatoire = /util/icons/mandatoryField.gif
 myLinks.update = /util/icons/update.gif
 myLinks.delete = /util/icons/delete.gif
 
-myLinks.addLink = /util/icons/addFavorit.gif
+myLinks.addLink = /util/icons/create-action/add-link.png
 myLinks.deleteLinks = /util/icons/delFavorit.gif
