--- a/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
@@ -43,7 +43,7 @@ pdcPeas.axis                           = /pdcPeas/jsp/icons/pdcPeas_axis.gif
 pdcPeas.icoSaveAsInterestCenter        = /util/icons/request_toSave.gif
 pdcPeas.target                         = /pdcPeas/jsp/icons/pdcPeas_target.gif
 pdcPeas.trame                          = /pdcPeas/jsp/icons/quadrillage.gif
-pdcPeas.icoCreateAxis                  = /pdcPeas/jsp/icons/pdcPeas_axis_to_add.gif
+pdcPeas.icoCreateAxis                  = /pdcPeas/jsp/icons/create-action/add-axis.png
 pdcPeas.icoDeleteAxis                  = /pdcPeas/jsp/icons/pdcPeas_axis_to_del.gif
 
 pdcPeas.icoDeleteArbo                  = /pdcPeas/jsp/icons/pdcPeas_path_to_del.gif
