--- a/config-core/src/main/config/properties/org/silverpeas/templatedesigner/settings/templateDesignerIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/templatedesigner/settings/templateDesignerIcons.properties
@@ -31,7 +31,7 @@ templateDesigner.default = /util/icons/duplicate.gif
 templateDesigner.visible = /util/icons/visible.gif
 templateDesigner.masque = /util/icons/masque.gif
 
-templateDesigner.newTemplate = /util/icons/formManager_to_add.gif
+templateDesigner.newTemplate = /util/icons/create-action/add-form.png
 
 templateDesigner.mandatory = /util/icons/mandatoryField.gif
 
