--- a/config-core/src/main/config/properties/org/silverpeas/interestCenterPeas/settings/interestCenterPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/interestCenterPeas/settings/interestCenterPeasIcons.properties
@@ -21,5 +21,5 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-icoAddNew              = /interestCenterPeas/jsp/icons/requestAdd.gif
+icoAddNew              = /util/icons/create-action/add-request.png
 icoDelete              = /interestCenterPeas/jsp/icons/requestDelete.gif
