--- a/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/settings/pdcSubscriptionPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/settings/pdcSubscriptionPeasIcons.properties
@@ -21,5 +21,5 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-icoAddNew              = /pdcSubscriptionPeas/jsp/icons/addsubscr.gif
+icoAddNew              = /util/icons/create-action/add-folder.png
 icoDelete              = /pdcSubscriptionPeas/jsp/icons/delsubscr.gif
