--- a/war-core/src/main/webapp/WEB-INF/web.xml
+++ b/war-core/src/main/webapp/WEB-INF/web.xml
@@ -418,7 +418,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     </servlet>
     <servlet>
         <servlet-name>VersioningDragAndDrop</servlet-name>
-        <servlet-class>com.stratelia.silverpeas.versioningPeas.servlets.DragAndDrop</servlet-class>
+        <servlet-class>org.silverpeas.attachment.web.VersionedDragAndDrop</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>FileSharingRequestRouter</servlet-name>
