--- a/ejb-core/pom.xml
+++ b/ejb-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas</groupId>
     <artifactId>core</artifactId>
-    <version>5.10.1-SNAPSHOT</version>
+    <version>5.10.1</version>
   </parent>
 
   <groupId>com.silverpeas.core</groupId>
