closing definitively feature #3600 integration of Aurore's icons and homogenizing terminology

--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda.properties
@@ -70,9 +70,8 @@ priorite3 = Basse
 
 # Operation
 fermer = Fermer 
-nouvelleNote = Nouvel \u00e9v\u00e9nement
+nouvelleNote = Cr\u00E9er un \u00E9v\u00E9nement
 confirmationSuppressionNote = Etes-vous s\u00fbr de vouloir supprimer l'\u00e9v\u00e9nement
-ajouterNote = Nouvel \u00e9v\u00e9nement
 ajouter = Ajouter 
 supprimer = Supprimer 
 mettreAJour = Valider
