--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasIcons.properties
@@ -53,8 +53,8 @@ JDP.info = /util/icons/info.gif
 
 JDP.user = /util/icons/user.gif
 JDP.userAdd = /util/icons/user_add_to_group.gif
-JDP.userCreate = /util/icons/user_to_add.gif
-JDP.importCsv = /util/icons/sqlDomainCsvImport.gif
+JDP.userCreate = /util/icons/create-action/add-user.png
+JDP.importCsv = /util/icons/create-action/import-csv.png
 JDP.userDel = /util/icons/user_to_del.gif
 JDP.userImport = /util/icons/user_add_to_domain.gif
 JDP.userManage = /util/icons/manage_user.gif
