--- a/config-core/src/main/config/properties/org/silverpeas/mylinks/multilang/myLinksBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/mylinks/multilang/myLinksBundle.properties
@@ -22,10 +22,10 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 myLinks.links = Mes liens favoris
-myLinks.linksByComponent = Liens du composant
+myLinks.linksByComponent = Liens de l'application
 myLinks.createLink = > Créer un lien favori
 myLinks.updateLink = > Modifier un lien favori
-myLinks.addLink = Ajouter un lien
+myLinks.addLink = Créer un lien
 myLinks.visible = Visible en page d'accueil
 myLinks.url = Url
 myLinks.popup = Ouvrir dans une nouvelle fenêtre
@@ -33,4 +33,4 @@ myLinks.operation = Opérations
 myLinks.deleteLinks = Supprimer les liens sélectionnés
 myLinks.deleteSelection = Etes vous sûr de vouloir supprimer la sélection ? 
 myLinks.messageConfirm = Le lien a bien été ajouté à vos favoris
-myLinks.retour = Retour au composant
+myLinks.retour = Retour à l'application
