--- a/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
@@ -43,7 +43,7 @@ pdcPeas.axis                           = /pdcPeas/jsp/icons/pdcPeas_axis.gif
 pdcPeas.icoSaveAsInterestCenter        = /util/icons/request_toSave.gif
 pdcPeas.target                         = /pdcPeas/jsp/icons/pdcPeas_target.gif
 pdcPeas.trame                          = /pdcPeas/jsp/icons/quadrillage.gif
-pdcPeas.icoCreateAxis                  = /pdcPeas/jsp/icons/create-action/add-axis.png
+pdcPeas.icoCreateAxis                  = /util/icons/create-action/add-axis.png
 pdcPeas.icoDeleteAxis                  = /pdcPeas/jsp/icons/pdcPeas_axis_to_del.gif
 
 pdcPeas.icoDeleteArbo                  = /pdcPeas/jsp/icons/pdcPeas_path_to_del.gif
@@ -52,7 +52,7 @@ pdcPeas.icoUpdateValue                 = /pdcPeas/jsp/icons/pdcPeas_value_to_mod
 pdcPeas.icoMoveValue                   = /pdcPeas/jsp/icons/pdcPeas_value_to_move.gif
 
 
-pdcPeas.icoAddDaughterValue            = /pdcPeas/jsp/icons/pdcPeas_axisDaughter_to_add.gif
+pdcPeas.icoAddDaughterValue            = /util/icons/create-action/add-default.png
 pdcPeas.icoAddMotherValue              = /pdcPeas/jsp/icons/pdcPeas_axisMother_to_add.gif
 
 pdcPeas.icoCreateParamAxis             = /pdcPeas/jsp/icons/pdcPeas_paramAxis_to_add.gif
