--- a/config-core/src/main/config/properties/org/silverpeas/personalizationPeas/multilang/personalizationBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/personalizationPeas/multilang/personalizationBundle.properties
@@ -83,7 +83,7 @@ ParametrerNotification = Paramétrage
 LireNotification = Boîte de notification
 SendedUserNotifications = Notifications envoyées
 
-Notifier = Envoi d'une notification
+Notifier = Envoyer une notification
 MessageSuppressionCanal = Etes-vous sûr de vouloir supprimer ce canal ?
 MessageSuppressionRegle = Etes-vous sûr de vouloir supprimer cette règle ?
 
