--- a/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcSubscriptionPeas/multilang/pdcSubscriptionBundle.properties
@@ -22,20 +22,20 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 ICName = Nom
-RequestName = Centre d'interêt
+RequestName = Abonnement
 EmtyICName = Renseignez le nom svp
 ICName = Nom
 NameExists = Ce nom est déjà utilisé. Voulez-vous continuer ?
 
 name  = Nom
 value = Valeur
-AddSC = Créer un center d'interêt
+AddSC = Créer un abonnement
 DeleteSC = Supprimer
 EditSC = Modifier
 
-confirmDeleteSubscription = Êtes-vous sûr de vouloir supprimer la sélection ?
+confirmDeleteSubscription = Êtes-vous sûr(e) de vouloir supprimer la sélection ?
 Path = Mes abonnements
 
 Operations = Opérations
-emplacement = Thèmes
-thematique = Thèmes
+emplacement = Dossiers
+thematique = Dossiers
