--- a/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/settings/workflowDesignerIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/settings/workflowDesignerIcons.properties
@@ -23,7 +23,8 @@
 #
 workflowDesigner.logo = /workflowDesigner/jsp/icons/logo.gif
 
-workflowDesigner.add = /util/icons/create-action/add-workflow.png
+workflowDesigner.add = /util/icons/create-action/add-default.png
+workflowDesigner.add.workflow = /util/icons/create-action/add-workflow.png
 workflowDesigner.import = /util/icons/create-action/import-workflow.png
 workflowDesigner.delete = /util/icons/publicationDelete.gif
 workflowDesigner.smallDelete = /util/icons/delete.gif
