Feature #2815 - adding data storage quota handling on spaces (collaboratives and personals)

--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -41,6 +41,10 @@ JSPP.updateHomePage = Page d'accueil
 JSPP.SpaceTemplate = Mod\u00e8les d'espace
 JSPP.NoTemplate = Espace Vide
 JSPP.UPSpaceTemplateProfile = S\u00e9lectionner les groupes/utilisateurs \u00e0 affecter au r\u00f4le
+JSPP.dataStorageQuota = M\u00e9moire allou\u00e9e
+JSPP.dataStorageQuotaHelp = unit\u00e9 en Mo, 0 pour une m\u00e9moire illimit\u00e9e
+JSPP.dataStorageQuotaFull = La m\u00e9moire allou\u00e9e est enti\u00e8rement utilis\u00e9e
+JSPP.dataStorageUsed = M\u00e9moire utilis\u00e9e
 
 JSPP.welcome =  Bienvenue sur le module Gestion d'espaces
 
@@ -86,10 +90,10 @@ JSPP.creationInstance = Ajout d'une application
 JSPP.roleDescription = Description du r\u00f4le
 
 # erreurs
-MustContainsText = doit \u00eatre renseign\u00e9 
-ThisFormContains = Attention, ce formulaire contient 
-ContainsTooLargeText = ne doit pas exc\u00e9der 
-NbMaxTextArea = 2000 
+MustContainsText = doit \u00eatre renseign\u00e9
+ThisFormContains = Attention, ce formulaire contient
+ContainsTooLargeText = ne doit pas exc\u00e9der
+NbMaxTextArea = 2000
 Characters = caract\u00e8res
 JSPP.MustBeginsByHTTP = doit contenir une URL d\u00e9butant par http:// ou https://
 
@@ -101,7 +105,7 @@ JSPP.MessageSuppressionInstanceBegin = Etes-vous s\u00fbr(e) de vouloir supprime
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 # onglets roles
-JSPP.Manager = Managers d'espace 
+JSPP.Manager = Managers d'espace
 JSPP.admin = Gestionnaires
 JSPP.publisher = Publieurs
 JSPP.writer = R\u00e9dacteurs
@@ -130,7 +134,7 @@ JSPP.ExistingComponentName = D\u00e9placement impossible... Une application port
 JSPP.movingInProgress = D\u00e9placement en cours...
 
 #  Copy/Cut/Paste component
-JSPP.CopyOf = Copie de 
+JSPP.CopyOf = Copie de
 
 # Sauvegarde
 JSPP.BackupUnlimited = Sauvegarder/Restaurer des applications
