--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -46,5 +46,12 @@ DisplaySpacePositionConfiguration=BEFORE
 EnableRecoverRightsOperation=false
 
 
-templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/admin/space (défini dans SilverpeasSettings.xml)
+templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/admin/space (dÃ©fini dans SilverpeasSettings.xml)
 customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/admin/space
+
+# Enable data storage quota of space (included personal spaces)
+space.storage.quota.activated = false
+# Data storage limit of a collaborative space (in Mega byte)
+space.storage.quota.default.maxCount = 0
+# Data storage limit of a user personal space (in Mega byte)
+user.space.storage.quota.default.maxCount = 0
