--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
@@ -42,6 +42,7 @@ t\u00e9l\u00e9chargementDate = T\u00e9l\u00e9charg\u00e9 le
 Title = Titre
 Description = Description
 Operations = Op\u00e9rations
+allVersions = Toutes les versions...
 
 Up = D\u00e9placer vers le haut
 Down = D\u00e9placer vers le bas
