--- a/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/multilang/workflowDesignerBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/workflowdesigner/multilang/workflowDesignerBundle.properties
@@ -262,8 +262,7 @@ workflowDesigner.help.input = Exactly one of the first two fields is required; t
 <li>Enter the value of the field.</li>\
 <li>Select the type of the item and the way it is displayed.</li>\
 <li>Set the field as required.</li>\
-<li>Set the field as read only.</li>\
-<li>Add labels.</li></ul>
+<li>Set the field as read only.</li></ul>
 
 workflowDesigner.help.item = This screen allows: <ul> \
 <li>Entering the item name, required.</li>\
