--- a/config-core/src/main/config/properties/org/silverpeas/util/viewGenerator/settings/SilverpeasLight.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/viewGenerator/settings/SilverpeasLight.properties
@@ -66,7 +66,7 @@ customVisible =
 helpVisible =
 clipboardVisible =
 glossaryVisible =
-directoryVisible = 
+directoryVisible =
 
 # Visibilit\u00e9 composants Espace personnel ("false" pour masquer)
 personnalSpaceVisible =
@@ -93,7 +93,7 @@ spaceMaxChar = 25
 
 # Default homepage (Ex: http://<host>/page.htm)
 defaultHomepage =
-persoHomepage = 
+persoHomepage =
 
 # Ids des composants affich\u00e9s dans la Topbar
 # les ids doivent \u00eatre s\u00e9par\u00e9s par des virgules.
@@ -113,3 +113,6 @@ displayConnectedUsers = true
 # displayUserFavoriteSpace allowed values are : DISABLE, BOOKMARKS, ALL
 displayUserFavoriteSpace = DISABLE
 enableUFSContainsState = false
+
+# In case of transversal subspace, parent tree can be hidden (restrictedPathForSpaceTransverse=true)
+restrictedPathForSpaceTransverse=false
