Feature #82 : dialog to create an attachment with i18n messages

--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/multilang/attachment.properties
@@ -64,6 +64,9 @@ attachment.SameFileNameAlreadyCheckout = Vous avez d\u00e9j\u00e0 r\u00e9serv\u0
 
 attachment.uploadFailed = L'envoi semble avoir \u00e9chou\u00e9
 
+attachment.version.label=Type de la version
+attachment.version_public.label=Public
+attachment.version_wip.label=Travail
 
 attachment.notifSubjectLib = Fichier r\u00e9serv\u00e9 : lib\u00e9r\u00e9
 attachment.notifSubjectExpiry = Fichier r\u00e9serv\u00e9 : \u00e9ch\u00e9ance demain
@@ -73,7 +76,7 @@ attachment.notifUserExpiry = arrive \u00e0 \u00e9ch\u00e9ance de r\u00e9servatio
 attachment.notifUserAlert = arrivera bient\u00f4t \u00e0 \u00e9ch\u00e9ance de r\u00e9servation
 attachment.notifUserLib = est arriv\u00e9 \u00e0 \u00e9ch\u00e9ance et a \u00e9t\u00e9 lib\u00e9r\u00e9
 
-#                  A mettre \u00e0 jour dans le multilang general 
+# A mettre \u00e0 jour dans le multilang general 
 modifier = Modifier
 supprimer = Supprimer
 imprimer = Imprimer
