--- a/config-core/src/main/config/properties/org/silverpeas/util/attachment/mime_types.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/util/attachment/mime_types.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Registered mime-types							
+# Registered mime-types
 bz2  application/x-bzip
 tar.bz2 application/x-bzip
 tbz2  application/x-bzip
@@ -33,8 +33,8 @@ tgz application/x-gzip
 #			application/activemessage
 #			application/andrew-inset
 #			application/applefile
-#			application/atomicmail				
-#			application/dca-rft				
+#			application/atomicmail
+#			application/dca-rft
 #			application/dec-dx
 hqx			application/mac-binhex40
 cpt			application/mac-compactpro
@@ -134,6 +134,7 @@ pbm			image/x-portable-bitmap
 pgm			image/x-portable-graymap
 ppm			image/x-portable-pixmap
 rgb			image/x-rgb
+tga			image/x-tga
 xbm			image/x-xbitmap
 xpm			image/x-xpixmap
 xwd			image/x-xwindowdump
@@ -202,6 +203,7 @@ oth		application/vnd.oasis.opendocument.text-web
 otp		application/vnd.oasis.opendocument.presentation-template
 ots		application/vnd.oasis.opendocument.spreadsheet-template
 ott		application/vnd.oasis.opendocument.text-template
+pcd		image/pcd
 pic		image/pict
 pict	image/pict
 pls		audio/x-scpls
