Viewer API : - preview services with ImageMagick - view services with SwfTools and FlexPaper

--- a/config-core/src/main/config/properties/org/silverpeas/viewer/viewer.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/viewer/viewer.properties
@@ -20,7 +20,10 @@
 #  You should have received a copy of the GNU Affero General Public License
 #  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Maximum pixel width of an preview.
+# Maximum pixel width of a preview.
 preview.width.max = 800
-# Maximum pixel height of an preview.
+# Maximum pixel height of a preview.
 preview.height.max = 500
+
+# FlexPaper license key
+flexpaper.licenseKey =
