Moving some dependencies into provided scope to avoid duplication

--- a/war-core/pom.xml
+++ b/war-core/pom.xml
@@ -172,6 +172,31 @@
       <artifactId>commons-io</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <artifactId>aspectjrt</artifactId>
+      <groupId>org.aspectj</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>aspectjweaver</artifactId>
+      <groupId>org.aspectj</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>commons-httpclient</artifactId>
+      <groupId>commons-httpclient</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>commons-codec</artifactId>
+      <groupId>commons-codec</groupId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <artifactId>rome</artifactId>
+      <groupId>rome</groupId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
