--- a/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda.properties
@@ -23,12 +23,12 @@
 #
 
 # agenda
-agenda = Mon agenda 
+agenda = Mon agenda
 
 # affichage
-jour = Jour 
-semaine = Semaine 
-mois = Mois 
+jour = Jour
+semaine = Semaine
+mois = Mois
 annee = Ann\u00e9e
 
 # invitations
@@ -36,9 +36,9 @@ listeInvitations = Liste des invitations
 
 # Liste de diffusion
 listeDiffusion = Liste des participants
-listeDiffusionVide = Aucun 
+listeDiffusionVide = Aucun
 editionListeDiffusion =  Inviter des participants
-listeUtilisateurs = Utilisateurs 
+listeUtilisateurs = Utilisateurs
 tentative = N'a pas r\u00e9pondu
 accepted = Participera
 declined = Ne participera pas
@@ -50,17 +50,17 @@ accepterInvitation = Accepter
 refuserInvitation = Refuser
 
 # Categories
-categories = Rubriques 
+categories = Rubriques
 listeCategories = Liste des rubriques
-listeCategoriesVide = Aucune 
+listeCategoriesVide = Aucune
 categoriesDispo = Rubriques disponibles
 editionCategories = S\u00e9lectionner des rubriques
-toutesCategories = Toutes 
+toutesCategories = Toutes
 
 # Classification
-classification = Type 
-public = Publique 
-private = Priv\u00e9e 
+classification = Type
+public = Publique
+private = Priv\u00e9e
 confidential = Confidentielle
 
 priorite0 = Ind\u00e9finie
@@ -69,43 +69,43 @@ priorite2 = Moyenne
 priorite3 = Basse
 
 # Operation
-fermer = Fermer 
+fermer = Fermer
 nouvelleNote = Nouvel \u00e9v\u00e9nement
 confirmationSuppressionNote = Etes-vous s\u00fbr de vouloir supprimer l'\u00e9v\u00e9nement
 ajouterNote = Nouvel \u00e9v\u00e9nement
-ajouter = Ajouter 
-supprimer = Supprimer 
+ajouter = Ajouter
+supprimer = Supprimer
 mettreAJour = Valider
 retourAgenda = Retour \u00e0 l'agenda
 retour = Retour
 ajoutOk = Ajout OK
 majOk = Mise \u00e0 jour OK
 suppressionOk = Suppression OK
-supprimerNote = Supprimer 
-modifierListeDiffusion = Modifier 
+supprimerNote = Supprimer
+modifierListeDiffusion = Modifier
 trouverCreneau = Trouver une disponibilit\u00e9
 modifierCategories = Modifier les rubriques
 afficherCalendrier = Afficher le calendrier
-mettreAJour = Valider 
-annuler = Annuler 
-retour = Retour 
-valider = Valider 
+mettreAJour = Valider
+annuler = Annuler
+retour = Retour
+valider = Valider
 
 # attribut note
 editerNote = Edition d'un \u00e9v\u00e8nement
 organisateurNote = Organisateur
-nomNote = Nom 
-descriptionNote = Description 
-dateDebutNote = Date de d\u00e9but 
+nomNote = Nom
+descriptionNote = Description
+dateDebutNote = Date de d\u00e9but
 heureDebutNote = Heure de d\u00e9but
-dateFinNote = Date de fin 
+dateFinNote = Date de fin
 heureFinNote = Heure de fin
 sansHoraireSpecifique = Journ\u00e9e enti\u00e8re
-mandatoryFields = Obligatoire 
+mandatoryFields = Obligatoire
 
 # navigation
-precedent = Pr\u00e9c\u00e9dent 
-suivant = Suivant 
+precedent = Pr\u00e9c\u00e9dent
+suivant = Suivant
 aujourdhui = Aujourd'hui
 
 # jour
@@ -154,17 +154,17 @@ heureFinErreur = Vous devez indiquer l'heure de fin s'il y a une heure de d\u00e
 heureDebutErreur = Vous devez indiquer l'heure de d\u00e9but s'il y a une heure de fin
 heureFinAvantDebutErreur = La date de fin doit succ\u00e9der la date de d\u00e9but
 champsTropLong = Champs description trop long !
-TheField = le champ 
-MustContainsText = doit \u00eatre renseign\u00e9 
-ContainsTooLargeText = ne doit pas exc\u00e9der 
-NbMaxTextArea = 2000 
+TheField = le champ
+MustContainsText = doit \u00eatre renseign\u00e9
+ContainsTooLargeText = ne doit pas exc\u00e9der
+NbMaxTextArea = 2000
 Characters = caract\u00e8res
-MustContainsCorrectDate = doit contenir une date correcte 
-MustContainsPostDateToBeginDate = doit contenir une date post\u00e9rieure \u00e0 la date de d\u00e9but 
-MustContainsPostHourToBeginHour = doit contenir une heure post\u00e9rieure \u00e0 l'heure de d\u00e9but 
-ThisFormContains = Attention, ce formulaire contient 
-Error = erreur 
-Errors = erreurs 
+MustContainsCorrectDate = doit contenir une date correcte
+MustContainsPostDateToBeginDate = doit contenir une date post\u00e9rieure \u00e0 la date de d\u00e9but
+MustContainsPostHourToBeginHour = doit contenir une heure post\u00e9rieure \u00e0 l'heure de d\u00e9but
+ThisFormContains = Attention, ce formulaire contient
+Error = erreur
+Errors = erreurs
 
 # RDV
 NewRDV = Nouveau RDV
@@ -174,7 +174,7 @@ HeureRDV = \u00e0
 ThanksToConfirm = Merci de confirmer ou non votre pr\u00e9sence.
 
 # Agenda sharing
-viewOtherAgenda = Voir l'agenda d'un utilisateur 
+viewOtherAgenda = Voir l'agenda d'un utilisateur
 viewCurrentAgenda = Revenir \u00e0 votre agenda
 privateEvent = (Priv\u00e9)
 userAgenda = Agenda de <b> * </b>
@@ -183,34 +183,34 @@ privateEventLabel = Priv\u00e9
 publicEventLabel = Publique
 allDay = Toute la journ\u00e9e
 
-#  A mettre \u00e0 jour dans le multilang general 
-agenda = Mon agenda 
-listeDiffusionVide = Aucun 
-categories = Rubriques 
-listeCategoriesVide = Aucune 
-toutesCategories = Toutes 
-public = Publique 
-private = Priv\u00e9e 
-priorite = Priorit\u00e9 
-fermer = Fermer 
-supprimer = Supprimer 
+#  A mettre \u00e0 jour dans le multilang general
+agenda = Mon agenda
+listeDiffusionVide = Aucun
+categories = Rubriques
+listeCategoriesVide = Aucune
+toutesCategories = Toutes
+public = Publique
+private = Priv\u00e9e
+priorite = Priorit\u00e9
+fermer = Fermer
+supprimer = Supprimer
 mettreAJour = Valider
 retour = Retour
-supprimerNote = Supprimer 
-modifierListeDiffusion = Modifier 
-mettreAJour = Valider 
-ajouter = Ajouter 
-annuler = Annuler 
-retour = Retour 
-valider = Valider 
-nomNote = Nom 
-descriptionNote = Description 
-dateDebutNote = Date de d\u00e9but 
-dateFinNote = Date de fin 
-listeUtilisateurs = Utilisateurs 
-mandatoryFields = Obligatoire 
-precedent = Pr\u00e9c\u00e9dent 
-suivant = Suivant 
+supprimerNote = Supprimer
+modifierListeDiffusion = Modifier
+mettreAJour = Valider
+ajouter = Ajouter
+annuler = Annuler
+retour = Retour
+valider = Valider
+nomNote = Nom
+descriptionNote = Description
+dateDebutNote = Date de d\u00e9but
+dateFinNote = Date de fin
+listeUtilisateurs = Utilisateurs
+mandatoryFields = Obligatoire
+precedent = Pr\u00e9c\u00e9dent
+suivant = Suivant
 
 weekFirstDay = 2
 weekLastDay = 1
@@ -268,13 +268,10 @@ agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
 
 # Notifications
+titleCreate = Nouveau RDV
 titleUpdate = Notification de changement d'un RDV
 titleDelete = Notification de suppression d'un RDV
-subject = Votre rendez-vous intitul\u00e9
-with = avec
-delayed = a \u00e9t\u00e9 d\u00e9cal\u00e9 le
-planned = pr\u00e9vu le
-removed = a \u00e9t\u00e9 supprim\u00e9. 
+titleAttend = Notification de participation \u00e0 un RDV
 
 # Rss
 agenda.agenda = Agenda
@@ -305,7 +302,7 @@ agenda.SynchroInProgress = Importation en cours...
 
 agenda.SynchroFailed = La synchronisation a \u00e9chou\u00e9e.
 agenda.SynchroSucceeded = Synchronisation r\u00e9ussie.
-agenda.Subscribe = Lien d'acc\u00e8s priv\u00e9 \u00e0 cet agenda : 
+agenda.Subscribe = Lien d'acc\u00e8s priv\u00e9 \u00e0 cet agenda :
 
-agenda.ChooseDaysOff = S\u00e9lection des jours 
+agenda.ChooseDaysOff = S\u00e9lection des jours
 agenda.DaysOffSilver = non travaill\u00e9s
