Feature #3833 - adding the notification sending on attendee response about events handled by personal application "My Diary" - using StringTemplate - using new User Notification API
Conflicts:

	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda.properties
	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_de.properties
	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_en.properties
	config-core/src/main/config/properties/com/stratelia/webactiv/agenda/multilang/agenda_fr.properties

--- a/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/agenda/multilang/agenda.properties
@@ -267,13 +267,10 @@ agenda.minutes = minutes
 agenda.hostName = Mon ordinateur
 
 # Notifications
+titleCreate = Nouveau RDV
 titleUpdate = Notification de changement d'un RDV
 titleDelete = Notification de suppression d'un RDV
-subject = Votre rendez-vous intitul\u00e9
-with = avec
-delayed = a \u00e9t\u00e9 d\u00e9cal\u00e9 le
-planned = pr\u00e9vu le
-removed = a \u00e9t\u00e9 supprim\u00e9. 
+titleAttend = Notification de participation \u00e0 un RDV 
 
 # Rss
 agenda.agenda = Agenda
