Feature #3639 - adding application quotas into Silverpeas backoffice for SAAS using

--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle.properties
@@ -41,6 +41,11 @@ JSPP.updateHomePage = Page d'accueil
 JSPP.SpaceTemplate = Mod\u00e8les d'espace
 JSPP.NoTemplate = Espace Vide
 JSPP.UPSpaceTemplateProfile = S\u00e9lectionner les groupes/utilisateurs \u00e0 affecter au r\u00f4le
+JSPP.componentSpaceQuotaMaxCount = Nombre maximum d'applications
+JSPP.componentSpaceQuotaMaxCountHelp = 0 pour un nombre illimit\u00e9
+JSPP.componentSpaceQuotaUsed = Nombre d'applications
+JSPP.componentSpaceQuotaCurrentCount = {0} {0,choice, 1#application enregistr\u00e9e| 1<applications enregistr\u00e9es}
+JSPP.componentSpaceQuotaFull = Le nombre maximum d'applications est atteint
 
 JSPP.welcome =  Bienvenue sur le module Gestion d'espaces
 
@@ -86,10 +91,10 @@ JSPP.creationInstance = Ajout d'une application
 JSPP.roleDescription = Description du r\u00f4le
 
 # erreurs
-MustContainsText = doit \u00eatre renseign\u00e9 
-ThisFormContains = Attention, ce formulaire contient 
-ContainsTooLargeText = ne doit pas exc\u00e9der 
-NbMaxTextArea = 2000 
+MustContainsText = doit \u00eatre renseign\u00e9
+ThisFormContains = Attention, ce formulaire contient
+ContainsTooLargeText = ne doit pas exc\u00e9der
+NbMaxTextArea = 2000
 Characters = caract\u00e8res
 JSPP.MustBeginsByHTTP = doit contenir une URL d\u00e9butant par http:// ou https://
 
@@ -101,7 +106,7 @@ JSPP.MessageSuppressionInstanceBegin = Etes-vous s\u00fbr(e) de vouloir supprime
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 # onglets roles
-JSPP.Manager = Managers d'espace 
+JSPP.Manager = Managers d'espace
 JSPP.admin = Gestionnaires
 JSPP.publisher = Publieurs
 JSPP.writer = R\u00e9dacteurs
@@ -130,7 +135,7 @@ JSPP.ExistingComponentName = D\u00e9placement impossible... Une application port
 JSPP.movingInProgress = D\u00e9placement en cours...
 
 #  Copy/Cut/Paste component
-JSPP.CopyOf = Copie de 
+JSPP.CopyOf = Copie de
 
 # Sauvegarde
 JSPP.BackupUnlimited = Sauvegarder/Restaurer des applications
