--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
@@ -31,7 +31,7 @@ BlanksAllowedInPwd = false
 UserAddingAllowedForGroupManagers = false
 UseCommunityManagement = false
 
-templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/ (défini dans SilverpeasSettings.xml)
+templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/ (dÃ©fini dans SilverpeasSettings.xml)
 customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/
 
 quota.users.enable = false
