--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -46,5 +46,8 @@ DisplaySpacePositionConfiguration=BEFORE
 EnableRecoverRightsOperation=false
 
 
-templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/admin/space (défini dans SilverpeasSettings.xml)
+templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/admin/space (dÃ©fini dans SilverpeasSettings.xml)
 customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/admin/space
+
+# Activation of quota limitation of components instanced into spaces
+space.component.quota.activated = false
