about feature #3817, adding preview and view functions on files in result list

--- a/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasIcons.properties
@@ -95,3 +95,6 @@ pdcPeas.groupSynchronized = /jobDomainPeas/jsp/icons/scheduledGroup.gif
 pdcPeas.addPosition = /pdcPeas/jsp/icons/add.gif
 pdcPeas.editPosition = /util/icons/update.gif
 pdcPeas.deletePosition = /util/icons/delete.gif
+
+pdcPeas.file.preview = /util/icons/preview.png
+pdcPeas.file.view = /util/icons/view.png
