about feature #3686, updating role mapping of application "blog"

--- a/config-core/src/main/config/properties/org/silverpeas/admin/roleMapping.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/admin/roleMapping.properties
@@ -30,8 +30,8 @@ almanach_writer = publisher
 almanach_reader = user
 
 blog_admin = admin
-blog_publisher = admin
-blog_writer = admin
+blog_publisher = publisher
+blog_writer = publisher
 blog_reader = user
 
 bookmark_admin = Admin
