--- a/config-core/src/main/config/properties/org/silverpeas/sharing/multilang/fileSharingBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/sharing/multilang/fileSharingBundle.properties
@@ -61,4 +61,4 @@ sharing.maxValue = doit \u00eatre compris entre
 sharing.shareFile = a choisi de partager le fichier&nbsp;:
 sharing.downloadFileHelp = Pour t\u00e9l\u00e9charger directement le fichier, <br/>faites un <b>clic droit > Enregistrer la cible sous ... </b>
 sharing.continuous = Permanent
-sharing.nodeName = Th\u00e8me
+sharing.nodeName = Dossier
