Cleaning some code in tests

--- a/lib-core/src/test/resources/log4j.properties
+++ b/lib-core/src/test/resources/log4j.properties
@@ -21,8 +21,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-# Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=DEBUG, A1
+# Set root logger level to WARN and its only appender to A1.
+log4j.rootLogger=WARN, A1
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
