--- a/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobDomainPeas/settings/jobDomainPeasSettings.properties
@@ -34,4 +34,5 @@ UseCommunityManagement = false
 templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/ (défini dans SilverpeasSettings.xml)
 customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/
 
-quota.users.enable = false
+# Activation of quota limitation of users into a domain
+quota.domain.users.activated = false
