--- a/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/jobStartPagePeas/settings/jobStartPagePeasSettings.properties
@@ -50,4 +50,4 @@ templatePath=${SILVERPEAS_HOME}/resources/StringTemplates/admin/space (défini d
 customersTemplatePath = ${SILVERPEAS_DATA_HOME}/StringTemplates/admin/space
 
 # Activation of quota limitation of components instanced into spaces
-space.component.quota.activated = false
+quota.space.components.activated = false
