Feature #3839 : adding a Silverpeas Token API & REST Web-Services authentication by token. - displaying user token in his profile - adding Cross-Origin Resource Sharing (CORS) handling - modifying space and component REST Web-Service to be compliant with user token handling (because of using some UI services which are not accessible via user authentication by tokens)

--- a/config-core/src/main/config/properties/org/silverpeas/general.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/general.properties
@@ -72,10 +72,18 @@ charset=UTF-8
 
 avatar.property = login
 avatar.extension = jpg
-avatar.path = 
+avatar.path =
 
 exportTemplatePath = data/template-export
 
 AdminFromComponentEnable = true
 
 availableToolIds=scheduleEventTool
+
+# This parameter is used to handle the Cross-Origin Resource Sharing (CORS).
+# By default, no domains is allowed except that of the Silverpeas server itself.
+# Setting the parameter to "*" (web.request.domain.allowed = *) to allow all domains.
+# In case of restriction, please change the parameter value with allowed domains each one separated by a comma.
+# There is no need to add the Silverpeas domain server, it is automatically added in request response by the server.
+# Limited allowed domains, for example : "http://www.allowedDomain.com, http://www.otherAllowedDomain.fr"
+web.request.domain.allowed =
