--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle.properties
@@ -26,7 +26,7 @@
 directory.connected=Connect\u00e9 depuis
 
 #Profil
-newsFeed.scope.display = Afficher : 
+newsFeed.scope.display = Afficher :
 newsFeed.scope.all = Tous
 newsFeed.scope.publication = Publications
 newsFeed.scope.event = Ev\u00e8nements
@@ -53,14 +53,15 @@ newsFeed.photo.updated.true=a modifi\u00e9 l'image
 newsFeed.photo.updated.false=a publi\u00e9 l'image
 newsFeed.event.label=participera \u00e0 l'\u00e9v\u00e9nement
 newsFeed.lastevent.label= a particip\u00e9 \u00e0 l'\u00e9v\u00e9nement
-newsFeed.status.suffix=a mis \u00e0 jour son statut \u00e0 
-newsFeed.relationShip.label = a ajout\u00e9 * \u00e0 son r\u00e9seau \u00e0 
+newsFeed.status.suffix=a mis \u00e0 jour son statut \u00e0
+newsFeed.relationShip.label = a ajout\u00e9 * \u00e0 son r\u00e9seau \u00e0
 
 myProfile.UserRights = Droits
 myProfile.OldPassword = Ancien mot de passe
 myProfile.NewPassword = Nouveau mot de passe
 myProfile.NewPasswordConfirm = Confirmation du nouveau mot de passe
 myProfile.WrongNewPwd = La confirmation du mot de passe est incorrecte...
+myProfile.Token = Token
 myProfile.MessageOK = Votre profil a \u00e9t\u00e9 mis \u00e0 jour avec succ\u00e8s...
 myProfile.Error_bad_credential = Votre mot de passe est incorrect
 myProfile.Error_unknown = Impossible de modifier votre profil, veuillez contacter votre administrateur
@@ -107,7 +108,7 @@ myProfile.invitations.sent = Envoy\u00e9es
 myProfile.invitations.cancel = Annuler l'invitation
 myProfile.invitations.accept = Accepter l'invitation
 myProfile.invitations.ignore = Ignorer l'invitation
-myProfile.invitations.date = Date de l'invitation : 
+myProfile.invitations.date = Date de l'invitation :
 
 myProfile.invitations.outbox.empty = Vous n'avez pas d'invitation en attente.
 myProfile.invitations.inbox.empty = Vous n'avez pas re\u00e7u d'invitation.
@@ -129,7 +130,7 @@ myContactProfile.tab.profile = Profil
 myContactProfile.tab.wall = Mur
 myContactProfile.contacts.common = contacts communs
 
-profil.subnav.display=Afficher : 
+profil.subnav.display=Afficher :
 profil.subnav.identity=Identit\u00e9
 
 invitation.send = Envoyer une invitation
