--- a/ws-test-core/pom.xml
+++ b/ws-test-core/pom.xml
@@ -29,6 +29,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.0-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <scope>provided</scope>
