closing feature #3446 adding a parameter to include/exclude users from global search

--- a/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/pdcPeas/settings/pdcPeasSettings.properties
@@ -54,10 +54,11 @@ wordSpellingMinScore=0.5f
 
 #facet search group filter blacklist (ex : todo,agenda,TreeNode)
 searchengine.facet.component.blacklist = 
-searchengine.facet.max.length = 20
+searchengine.facet.max.length = 30
 
 SpacesExcludedFromGlobalSearch = 
 ComponentsExcludedFromGlobalSearch = 
+search.users.included = false
 
 external.search.enable = false
 
