--- a/ejb-core/node/pom.xml
+++ b/ejb-core/node/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.silverpeas.core</groupId>
     <artifactId>ejb-core</artifactId>
-    <version>5.11</version>
+    <version>5.12-SNAPSHOT</version>
   </parent>
 
   <groupId>com.silverpeas.core.ejb-core</groupId>
