junit 4.11 : Migrating code and poms for JUnit 4.11

--- a/test-core/pom.xml
+++ b/test-core/pom.xml
@@ -18,7 +18,7 @@
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit-dep</artifactId>
+      <artifactId>junit</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
