integrating feature #3839 enhancing identity tab on "My profile" (using fieldset)

--- a/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/social/multilang/socialNetworkBundle.properties
@@ -72,6 +72,8 @@ myProfile.WrongLength = La longueur du mot de passe est insuffisante !
 myProfile.NoSpacesInPassword = Le mot de passe ne doit pas contenir d'espace !
 myProfile.LoginQuestion = Question en cas d'oubli de mot de passe
 myProfile.LoginAnswer = R\u00e9ponse \u00e0 la question
+myProfile.identity.fieldset.main = Informations principales
+myProfile.identity.fieldset.extra = Informations compl\u00e9mentaires
 
 myProfile.settings.FavoriteLanguage = Langue
 myProfile.settings.language_fr = Fran\u00e7ais
